<resources>
    <string name="app_name">Agava COVID</string>
    <string name="title_principal">Principal</string>
    <string name="title_info">Información</string>
    <string name="title_ajustes">Ajustes de Idioma</string>
    <string name="button_send">Enviar diagnóstico</string>
    <string name="button_info_bajo">Riesgo bajo</string>
    <string name="button_info_medio">Riesgo medio</string>
    <string name="button_info_alto">Riesgo alto</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="info_presentacion">"AgavaCovid es una app de rastreo de contactos. Su objetivo principal es permitir a sus usuarios  poder conocer forma rápida y sencilla si han podido tener un contacto con algún enfermo.
        \nDesde AgavaCOVID le garantizamos que sus datos serán tratados de forma apropiada y consecuente con nuestro comprosmiso con la privacidad del usuario.
        \nAgradecemos que haga uso de nuestra herramienta y por supuesto cuidese y cuide a los demás."</string>
    <string name="title_presentacion">¿Quiénes somos?</string>
    <string name="title_politica">\nPolítica de privacidad</string>
    <string name="politica">baljlrhkrhkdvgakgikg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_envio">Comunica tu positivo</string>
    <string name="hint_fecha">Seleccione una fecha</string>
    <string name="spanish">Español</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="portuguese">Português</string>
    <string name="italian">Italiano</string>
    <string name="german">Deutsch</string>
    <string name="russian">Русский</string>
    <string name="title_envio_fecha">Fecha de inicio de síntomas</string>
    <string name="title_envio_fecha_info">"Introduzca la fecha de inicio de síntomas. si no has tenido síntomas, introduce la fecha de toma de muestra para el diagnóstico.
        \nSi no conoces ninguna de estas dos fechas, déjalo en blanco."</string>
    <string name="title_envio_codigo">Código de diagnóstico</string>
    <string name="title_envio_codigo_info">Introduzca el código de diagnóstico que se le haya proporcionado.</string>
    <string name="hint_codigo">Introduzca el código</string>
    <string name="dialog_confirmacion">¿Quiere confirmar el envío de su diagnóstico?</string>
    <string name="consejo1verde">Cúbrete la boca y la nariz con una mascarilla.</string>
    <string name="consejo2verde">Mantén la distancia social.</string>
    <string name="consejo3verde">Utiliza gel hidroalcohólico cuando sea necesario.</string>
    <string name="mensajeverde">Estás bien sanote síiii :3</string>
    <string name="consejo1amarillo">Procura salir solo para lo imprescindible.</string>
    <string name="consejo2amarillo">Vigila el posible desarrollo de sintomas.</string>
    <string name="consejo3amarillo">Comunica a tu centro salud tu estado.</string>
    <string name="mensajeamarillo">Escóndete en casitaaaa :0</string>
    <string name="consejo1rojo">Aíslate lo máximo posible</string>
    <string name="consejo2rojo">Vigila la evolución de tus síntomas</string>
    <string name="consejo3rojo">Llama a tu médico si empeoras</string>
    <string name="mensajerojo">Cuídate, te amamos chiii :D</string>

    <string name="sincontactos">Sin contactos de riesgo identificados</string>
    <string name="concontactos">Con contactos de riesgo identificados</string>
    <string name="contagiado">Contagiado</string>

    <string name="sincontactosplus">Te informaremos en caso de un posible contacto</string>
    <string name="concontactosplus">Ten cuidadín</string>
    <string name="contagiadoplus">Quédate quieto parao</string>

    <string name="comunica">Comunica tu positivo</string>

</resources>