<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/vistaEnvio"
    tools:context=".SendActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <Space
                android:layout_width="1dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:text="@string/title_envio"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/title_envio_fecha"
                android:textSize="27sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="134dp"
                android:layout_gravity="center"
                android:text="@string/title_envio_fecha_info"
                android:textSize="17sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"/>

            <EditText
                android:id="@+id/etPlannedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/hint_fecha"
                android:inputType="date"
                android:maxLines="1" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/title_envio_codigo"
                android:textSize="27sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="340dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:text="@string/title_envio_codigo_info"
                android:textSize="17sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="1dp"
                android:layout_height="15dp"/>

            <EditText
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_codigo"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>
            <Button
                android:id="@+id/buttonConfirmacion"
                android:layout_width="237dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:text="Aceptar"
                android:textColor="@color/black"
                android:elevation="20dp"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>