<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="276dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="240dp"
        android:text="@string/dialog_confirmacion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="289dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="144dp"
        android:background="@color/Aceptar"
        android:text="@string/button_aceptar"
        android:textColor="@color/black"
        android:elevation="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="289dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Cancelar"
        android:text="@string/button_cancelar"
        android:textColor="@color/black"
        android:elevation="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>